WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
38641
[Qt] Nested overflow div does not scroll
https://bugs.webkit.org/show_bug.cgi?id=38641
Summary
[Qt] Nested overflow div does not scroll
Joseph Ligman
Reported
2010-05-06 06:46:51 PDT
A div with CSS overflow:hidden nested inside a div with CSS overflow:scroll does not pan scroll. A div with CSS overflow:scroll nested inside another div with overflow:scroll does not pan scroll. etc... Also, I would like to export webframe_scrollOverflow so I can use it independently of qtwebkit_webframe_scrollRecursively
Attachments
patch
(3.59 KB, patch)
2010-05-06 06:50 PDT
,
Joseph Ligman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Ligman
Comment 1
2010-05-06 06:50:54 PDT
Created
attachment 55232
[details]
patch
Arho Huttunen
Comment 2
2010-05-06 07:16:17 PDT
Is there any chance this could be made a public API?
Laszlo Gombos
Comment 3
2010-05-10 17:11:00 PDT
This looks good to me for an internal API. Any objections ? Kenneth, Simon ? Note that we also have a need to merge this back to the 4.6.x branch.
Simon Hausmann
Comment 4
2010-05-11 03:25:41 PDT
(In reply to
comment #3
)
> This looks good to me for an internal API. Any objections ? Kenneth, Simon ? > > Note that we also have a need to merge this back to the 4.6.x branch.
Fine with me. Please also update the eabi/wins def files.
Kenneth Rohde Christiansen
Comment 5
2010-05-11 05:13:30 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > This looks good to me for an internal API. Any objections ? Kenneth, Simon ? > > > > Note that we also have a need to merge this back to the 4.6.x branch. > > Fine with me. Please also update the eabi/wins def files.
Also ok with me.
Laszlo Gombos
Comment 6
2010-05-11 08:12:00 PDT
Comment on
attachment 55232
[details]
patch looks good, r+. I will update the def files after the patch is landed.
WebKit Commit Bot
Comment 7
2010-05-12 19:38:08 PDT
Comment on
attachment 55232
[details]
patch Clearing flags on attachment: 55232 Committed
r59335
: <
http://trac.webkit.org/changeset/59335
>
WebKit Commit Bot
Comment 8
2010-05-12 19:38:14 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 9
2010-05-18 02:01:51 PDT
(In reply to
comment #6
)
> (From update of
attachment 55232
[details]
) > looks good, r+. I will update the def files after the patch is landed.
Re-opening this issue, as the new export is still missing from the def files.
Laszlo Gombos
Comment 10
2010-05-18 15:49:55 PDT
Fixed the def file in
http://trac.webkit.org/changeset/59717
.
Simon Hausmann
Comment 11
2010-05-20 07:56:35 PDT
Revision
r59335
cherry-picked into qtwebkit-2.0 with commit 92655349c9c0299079107fdda847673a0024cf2f
Simon Hausmann
Comment 12
2010-05-21 05:47:57 PDT
Cherry-picked into qtwebkit-4.6 with commit d85b7b520ec57bfd3b4d25482ab62520f6736289
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug